--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@yudiel/react-qr-scanner": "^2.5.1",
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
